--- a/portfolio/src/components/navbar/navbar.styles.css
+++ b/portfolio/src/components/navbar/navbar.styles.css
@@ -1,18 +1,28 @@
 .navbarContainer {
     background-color: #233237;
+    border: skyblue 1px solid;
+    display: flex;
+    justify-content: space-around;
+
 }
 .myName {
     font-size: 2rem;
 }
 .navbar {
     display: flex;
+    width: 40%;
     justify-content: space-around;
+    align-items: center;
     border: pink 1px solid;
     margin: 0;
     padding: 0;
 }
+.icon{
+    color: white;
+}
 .icon:hover {
-    cursor: "pointer";
+    cursor: pointer;
+    color: blue;
 }
 
 /* 
